--- a/src/app/pages/account/register/register.component.html
+++ b/src/app/pages/account/register/register.component.html
@@ -7,7 +7,7 @@
                 <h4>Let's start creating your new account.</h4>
                 <div class="theme-card">
 
-                    <!-- {{RegistrationForm.value|json}} -->
+                   <!-- {{RegistrationForm.value|json}}  -->
 
                     <form class="theme-form" [formGroup]="RegistrationForm">
 
@@ -34,9 +34,9 @@
 
                         <div class="form-group" *ngIf="mobileOTP">
                             <label>Verify With OTP sent to {{f.mobileNo.value}} <span class="text-danger">
-                                </span></label> 
+                                </span></label>
                             <br />
-                            <br /> 
+                            <br />
                             <div class="input-group">
                                 <!-- <input type="password" class="form-control" id="exampleInputPassword"
                                     formControlName="mobilecode" placeholder="Enter OTP"> -->
@@ -60,32 +60,168 @@
                                 <h6 style="color: #969696">Resend OTP in:<b> {{counter}} second(s)</b></h6>
                             </div>
                         </div>
-                        <div *ngIf="!mobileverified">
+                        <div *ngIf="mobileverified">
 
                             <div class="form-group">
 
                                 <label for="email">Your First and Last Name</label>
                                 <input type="text" class="form-control" id="fname" formControlName="name"
-                                    placeholder="Name" [ngClass]="{ 'is-invalid': submitted && f.name.errors }">
+                                    maxlength="50" placeholder="First And Last Name"
+                                    [ngClass]="{ 'is-invalid': submitted && f.name.errors }">
                             </div>
+                            
+                
+                            <div class="form-group">
+
+                                <label>Business Type</label>
+                                <select class="custom-select" formControlName="BusinessType"
+                                    [ngClass]="{ 'is-invalid': submitted && f.BusinessType.errors }">
+                                    <option value="">Select Business Type</option>
+                                    <option value="Sole Proprietorship">Sole Proprietorship</option>
+                                    <option value="Partnership">Partnership</option>
+                                    <option value="PublicLimitedCompany">PublicLimitedCompany</option>
+                                    <option value="PrivateLimitedCompany">PrivateLimitedCompany</option>
+                                    <option value="Other">Other</option>
+
+
+                                </select>
+                            </div>
+
+                            <div class="form-group">
+                                <label>Industry</label>
+                                <select class="custom-select" formControlName="Industry"
+                                    [ngClass]="{ 'is-invalid': submitted && f.BusinessType.errors }">
+                                    <option value="">Select Industry</option>
+                                    <option value="Retail"> Accessories Retail (fashion)</option>
+                                    <option value="Wholesale">Wholesale</option>
+                                    <option value="Other">Other</option>
+
+                                </select>
+
+                            </div>
+                            <div class="form-group">
+                                <label>Business License Type</label>
+                                <select class="custom-select" formControlName="businessLicenseType"
+                                    [ngClass]="{ 'is-invalid': submitted && f.businessLicenseType.errors }">
+                                    <option value="">Select business license type</option>
+                                    <option value="GSTIN"> Goods & Services Tax Number (GSTIN)</option>
+                                    <option value="BusinessPAN">Business PAN</option>
+
+                                </select>
+
+                            </div>
+
+                            <div class="form-group" *ngIf="f.businessLicenseType.value=='GSTIN'">
+
+                                <label for="email">GST No</label>
+                                <input type="text" class="form-control" id="PANNo" formControlName="GSTNo"
+                                    maxlength="25" placeholder="GST No"
+                                    [ngClass]="{ 'is-invalid': submitted && f.GSTNo.errors }">
+                            </div>
+                            <div class="form-group" *ngIf="f.businessLicenseType.value=='BusinessPAN'">
+
+                                <label for="email">PAN No</label>
+                                <input type="text" class="form-control" id="PANNo" formControlName="PANNo"
+                                    maxlength="20" placeholder="PAN No"
+                                    [ngClass]="{ 'is-invalid': submitted && f.PANNo.errors }">
+                            </div>
+                            <div class="form-group">
+
+                                <label for="email">Business Name</label>
+                                <input type="text" class="form-control" id="BusinessName" formControlName="BusinessName"
+                                    maxlength="100" placeholder="Business Name"
+                                    [ngClass]="{ 'is-invalid': submitted && f.BusinessName.errors }">
+                            </div>
+f
+
                             <div class="form-group">
 
                                 <label for="email">Business Phone</label>
-                                <input type="text" class="form-control" id="fname" formControlName="Phone"
-                                    placeholder="Business Phone" [ngClass]="{ 'is-invalid': submitted && f.name.errors }">
+                                <input type="text" class="form-control" id="BusinessPhone" maxlength="15"
+                                    formControlName="BusinessPhone" placeholder="Business Phone"
+                                    [ngClass]="{ 'is-invalid': submitted && f.BusinessPhone.errors }">
                             </div>
                             <div class="form-group">
 
-                                <label for="email">Business Type</label>
-                                <input type="text" class="form-control" id="fname" formControlName="BusinessType"
-                                    placeholder="Business Phone" [ngClass]="{ 'is-invalid': submitted && f.name.errors }">
+                                <label for="email">Address1</label>
+                                <input type="text" class="form-control" id="Address1" formControlName="Address1"
+                                    maxlength="100" placeholder="Address2"
+                                    [ngClass]="{ 'is-invalid': submitted && f.Address1.errors }">
                             </div>
 
+                            <div class="form-group">
+
+                                <label for="email">Address2</label>
+                                <input type="text" class="form-control" id="Address2" formControlName="Address2"
+                                    maxlength="100" placeholder="Address2"
+                                    [ngClass]="{ 'is-invalid': submitted && f.Address2.errors }">
+                            </div>
+
+                            <div class="form-group">
+
+                                <label for="email">Pin Code</label>
+                                <input type="text" class="form-control" id="PinCode" formControlName="pinCode"
+                                    maxlength="10" placeholder="PinCode"
+                                    [ngClass]="{ 'is-invalid': submitted && f.pinCode.errors }">
+                            </div>
+
+                            <div class="form-group">
+
+                                <label for="email">City</label>
+                                <input type="text" class="form-control" id="City" formControlName="city" maxlength="50"
+                                    placeholder="City" [ngClass]="{ 'is-invalid': submitted && f.city.errors }">
+                            </div>
+
+                            <div class="form-group">
+                                <label>State</label>
+                                <select class="custom-select" formControlName="state"
+                                    [ngClass]="{ 'is-invalid': submitted && f.state.errors }">
+                                    <option value="">Select State</option>
+                                    <option value="Andhra Pradesh">Andhra Pradesh</option>
+                                    <option value="Andaman and Nicobar Islands">Andaman and Nicobar Islands</option>
+                                    <option value="Arunachal Pradesh">Arunachal Pradesh</option>
+                                    <option value="Assam">Assam</option>
+                                    <option value="Bihar">Bihar</option>
+                                    <option value="Chandigarh">Chandigarh</option>
+                                    <option value="Chhattisgarh">Chhattisgarh</option>
+                                    <option value="Dadar and Nagar Haveli">Dadar and Nagar Haveli</option>
+                                    <option value="Daman and Diu">Daman and Diu</option>
+                                    <option value="Delhi">Delhi</option>
+                                    <option value="Lakshadweep">Lakshadweep</option>
+                                    <option value="Puducherry">Puducherry</option>
+                                    <option value="Goa">Goa</option>
+                                    <option value="Gujarat">Gujarat</option>
+                                    <option value="Haryana">Haryana</option>
+                                    <option value="Himachal Pradesh">Himachal Pradesh</option>
+                                    <option value="Jammu and Kashmir">Jammu and Kashmir</option>
+                                    <option value="Jharkhand">Jharkhand</option>
+                                    <option value="Karnataka">Karnataka</option>
+                                    <option value="Kerala">Kerala</option>
+                                    <option value="Madhya Pradesh">Madhya Pradesh</option>
+                                    <option value="Maharashtra">Maharashtra</option>
+                                    <option value="Manipur">Manipur</option>
+                                    <option value="Meghalaya">Meghalaya</option>
+                                    <option value="Mizoram">Mizoram</option>
+                                    <option value="Nagaland">Nagaland</option>
+                                    <option value="Odisha">Odisha</option>
+                                    <option value="Punjab">Punjab</option>
+                                    <option value="Rajasthan">Rajasthan</option>
+                                    <option value="Sikkim">Sikkim</option>
+                                    <option value="Tamil Nadu">Tamil Nadu</option>
+                                    <option value="Telangana">Telangana</option>
+                                    <option value="Tripura">Tripura</option>
+                                    <option value="Uttar Pradesh">Uttar Pradesh</option>
+                                    <option value="Uttarakhand">Uttarakhand</option>
+                                    <option value="West Bengal">West Bengal</option>
+
+                                </select>
+
+                            </div>
 
                             <div class="form-group">
                                 <label>Email ID</label>
                                 <div class="input-group">
-                                    <input type="text" class="form-control" placeholder="Email ID"
+                                    <input type="text" class="form-control" placeholder="Email ID" maxlength="50"
                                         formControlName="email"
                                         [ngClass]="{ 'is-invalid': submitted && f.email.errors }">
 
@@ -96,7 +232,7 @@
 
                                 <label for="review">Password</label>
                                 <input type="password" class="form-control" id="review" formControlName="password"
-                                    [ngClass]="{ 'is-invalid': submitted && f.password.errors }"
+                                    maxlength="30" [ngClass]="{ 'is-invalid': submitted && f.password.errors }"
                                     placeholder="Enter your password" required="">
 
                             </div>
