--- a/src/app/shop/checkout/success/success.component.html
+++ b/src/app/shop/checkout/success/success.component.html
@@ -196,11 +196,11 @@
 
                                 <tr>
                                     <td colspan="4">
-                                        <b> Shipping</b>
+                                        <b> Packing</b>
                                     </td>
                                     <td colspan="2">
                                         <span style="float: right; font-size: 16px; line-height: 20px; color: var(--theme-deafult); font-weight: 400;">
-                                             <b>Free Shipping</b></span>
+                                             <b>Free Packing</b></span>
                                     </td>
                                 </tr>
                                 <tr class="total">
